# senior-project-cad-program

./: .gitmodules  CMakeLists.txt  README.md
include/IMGUI/: imstb_rectpack.h  imstb_truetype.h
include/dirent/: dirent.h
include/glad/: glad.h
libs/Win32/IMGUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/: CMakeLists.txt  glad.c  main.cpp
src/extra/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  camera.cpp  camera.h  frag.txt  imguiFunctions.cpp  imguiFunctions.h  vert.txt
src/models/: model.stl  untitled.stl
submodules/: CMakeLists.txt
tests/: Mesh.cpp  Mesh.h  camera.cpp  camera.h  shader.cpp  shader.h  tests.cpp
